--- a/SpecflowPages/SpecflowPages.csproj
+++ b/SpecflowPages/SpecflowPages.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Utils\ConstantUtils.cs" />
     <Compile Include="Utils\Driver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\HomePage.cs" />
     <Compile Include="Utils\LoginPage.cs" />
     <Compile Include="Utils\ProfileLangPage.cs" />
   </ItemGroup>
